# template-counterapp

./: .gitignore  Cargo.toml  README.md  TESTING.md  app.js  index.html  package-lock.json  package.json  serve.js  server.js  style.css  test-api.sh  test-package.sh  test.sh  test_api.sh  test_frontend.sh  verify-acceptance.sh
.github/workflows/: ci.yml
src/: counter.js  handlers.rs  index.js  index.test.js  main.rs  models.rs
test/: index.test.js
tests/: api_integration_tests.rs  counter.test.js
