[package]
name = "counter-api"
version = "0.1.0"
edition = "2021"
description = "Counter API backend using Axum framework"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
